header/footer WIP

--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -1,6 +1,10 @@
 /* =============
     Typography
 ============= */
+
+/*font-family: 'Nanum Gothic', sans-serif;
+font-family: 'PT Mono', monospace; */
+
 body{
     font-family: 'Montserrat', sans-serif;
 }
