--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -9,7 +9,7 @@ html {
 /* =============
     Variables
 ============= */
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -29,6 +29,12 @@ html {
  */
 body {
   margin: 0; }
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block; }
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -321,21 +327,21 @@ ul {
   ul li {
     list-style: none; }
 
-.container-grid {
+.grid-container {
   display: grid;
-  grid-template-columns: auto 1200px auto;
-  grid-template-areas: ". grid-content .";
-  min-height: 100vh; }
-  .container-grid .grid-content {
-    grid-area: grid-content;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
+  grid-template-columns: 15px auto 15px;
+  grid-template-areas: ".container."; }
+  @media (min-width: 1200px) {
+    .grid-container {
+      grid-template-columns: auto 1440px auto; } }
+  .grid-container > div {
+    grid-area: container; }
 
 /* =============
     Typography
 ============= */
+/*font-family: 'Nanum Gothic', sans-serif;
+font-family: 'PT Mono', monospace; */
 body {
   font-family: 'Montserrat', sans-serif; }
 
@@ -374,18 +380,93 @@ textarea {
 /* =============
     Header
 ============= */
+header {
+  border-bottom: 15px #000 solid;
+  padding-top: 15px; }
+  header div {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-areas: "t1 t2 t3 t4 . . . t5";
+    font-family: 'Nanum Gothic', sans-serif; }
+    header div #logo-container {
+      grid-area: t1;
+      display: flex;
+      justify-content: center;
+      padding: 10px; }
+      header div #logo-container div img {
+        max-width: 100%;
+        max-height: 100%;
+        display: block; }
+        @media (min-width: 768px) {
+          header div #logo-container div img {
+            width: initial; } }
+    header div #login-container {
+      grid-area: t2;
+      display: flex;
+      justify-content: center; }
+    header div #brands-container {
+      grid-area: t3;
+      display: flex;
+      justify-content: center; }
+    header div #about-container {
+      grid-area: t4;
+      display: flex;
+      justify-content: center; }
+    header div #burger-container {
+      grid-area: t5;
+      font-size: 1.875rem;
+      display: flex;
+      justify-content: space-between; }
+
 /* =============
     Footer
 ============= */
+footer {
+  border-top: 15px black solid; }
+  footer > div {
+    text-align: center; }
+    footer > div h1 {
+      padding: 10px;
+      font-family: 'Nanum Gothic', sans-serif;
+      font-size: 30px;
+      border-bottom: 15px black solid; }
+    footer > div p {
+      font-family: 'PT Mono', monospace;
+      padding: 30px;
+      font-size: 16px; }
+    footer > div form section input {
+      font-family: 'PT Mono', monospace;
+      color: black;
+      border-radius: 10px;
+      width: 471px;
+      padding: 5px;
+      border: 8px black solid; }
+    footer > div form section button {
+      border-radius: 10px;
+      padding: 5px;
+      background-color: white;
+      border: 8px black solid; }
+    footer > div ul {
+      padding: 20px;
+      display: grid;
+      grid-template-columns: repeat(9, 1fr);
+      grid-template-areas: ". . . s1 s2 s3 . . ."; }
+      footer > div ul #facebook-container {
+        grid-area: s1;
+        display: flex;
+        justify-content: center;
+        font-size: 30px; }
+      footer > div ul #twitter-container {
+        grid-area: s2;
+        display: flex;
+        justify-content: center;
+        font-size: 30px; }
+      footer > div ul #instagram-container {
+        grid-area: s3;
+        display: flex;
+        justify-content: center;
+        font-size: 30px; }
+
 /* =============
     Section 1
-============= */
-/* =============
-    Section 2
-============= */
-/* =============
-    Section 3
-============= */
-/* =============
-    Section 4
 ============= */
