--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -1,3 +1,70 @@
 /* =============
     Footer
 ============= */
+footer{
+
+    border-top: 15px black solid;
+
+    >div{
+        text-align: center;
+        
+        h1{
+            padding: 10px;
+            font-family: 'Nanum Gothic', sans-serif;
+            font-size: 30px;
+            border-bottom: 15px black solid;
+        }
+        p{
+            font-family: 'PT Mono', monospace;
+            padding:30px;
+            font-size:16px;
+        }
+
+        form{
+
+            section{
+                    input{
+                        font-family: 'PT Mono', monospace;
+                        color: black;
+                        border-radius: 10px;
+                        width: 471px;
+                        padding: 5px;
+                        border: 8px black solid;
+                    }
+                    button{
+                        border-radius: 10px;
+                        padding: 5px;
+                        background-color: white;
+                        border: 8px black solid;
+                    }
+            }
+        }
+
+        ul{
+            padding: 20px;
+            display: grid;
+            grid-template-columns: repeat(9,1fr);
+            grid-template-areas: ". . . s1 s2 s3 . . .";
+
+            #facebook-container{
+                grid-area: s1;
+                display: flex;
+                justify-content: center;
+                font-size: 30px;
+            }
+            #twitter-container{
+                grid-area: s2;
+                display: flex;
+                justify-content: center;
+                font-size: 30px;
+            }
+            #instagram-container{
+                grid-area: s3;
+                display: flex;
+                justify-content: center;
+                font-size: 30px;
+            }
+        }
+
+    }
+}
