--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -1,3 +1,63 @@
 /* =============
     Header
 ============= */
+header{
+    border-bottom: 15px $black solid;
+    padding-top: 15px;
+    
+    div{
+
+        display: grid;
+        grid-template-columns: repeat(8,1fr);
+        grid-template-areas: "t1 t2 t3 t4 . . . t5";
+        font-family:'Nanum Gothic', sans-serif;
+
+        #logo-container{
+            grid-area: t1;
+            display: flex;
+            justify-content: center;
+            padding: 10px;
+
+            div{
+
+                img{
+                    max-width: 100%;
+                    max-height: 100%;
+                    display: block;
+                
+
+                    @include md{
+                        width: initial;
+                    }
+                }
+            }
+        }
+
+        #login-container{
+            
+            grid-area: t2;
+            display: flex;
+            justify-content: center;
+        }
+
+        #brands-container{
+            
+            grid-area: t3;
+            display: flex;
+            justify-content: center;
+        }
+        #about-container{
+         
+            grid-area: t4;
+            display: flex;
+            justify-content: center;
+        }
+
+        #burger-container{
+            grid-area: t5;
+            font-size: rem-calc(30);
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+}
