--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -470,3 +470,45 @@ footer {
 /* =============
     Section 1
 ============= */
+section {
+  padding: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "p1 p2"; }
+  section div #p1-container {
+    grid-area: p1;
+    font-size: 15px;
+    font-family: 'PT Mono', monospace; }
+  section div #p2-container {
+    grid-area: p2;
+    font-size: 15px;
+    font-family: 'PT Mono', monospace; }
+  section div h1 {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-family: 'Nanum Gothic', sans-serif; }
+  section div h2 {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    font-family: 'PT Mono', monospace; }
+  section div h3 {
+    font-size: 50px;
+    font-family: 'PT Mono', monospace; }
+  section div h4 {
+    font-size: 50px;
+    font-family: 'PT Mono', monospace; }
+
+/* =============
+    Home Image
+============= */
+section div #grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 10px;
+  padding: 10px; }
+
+section div .item1 {
+  grid-column-start: 1;
+  grid-column-end: 1; }
