--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -1,9 +1,50 @@
 /* =============
     Section 1
 ============= */
-#section-1{
-    .grid-content{
-        
+section{
+    padding: 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "p1 p2";
+
+    div{
+
+        #p1-container{
+            grid-area: p1;
+            font-size: 15px;
+            font-family: 'PT Mono', monospace;
+        }
+
+        #p2-container{
+            grid-area: p2;
+            font-size: 15px;
+            font-family: 'PT Mono', monospace;
+        }
+
+        h1{
+            display: flex;
+            justify-content: center;
+            font-size: 30px;
+            font-family: 'Nanum Gothic', sans-serif;
+        }
+
+        h2{
+            display: flex;
+            justify-content: center;
+            font-size: 15px;
+            font-family: 'PT Mono', monospace;
+        }
+
+        h3{
+            font-size: 50px;
+            font-family: 'PT Mono', monospace;
+        }
+
+        h4{
+            font-size: 50px;
+            font-family: 'PT Mono', monospace;
+        }
+
     }
 
 }
