--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -470,45 +470,90 @@ footer {
 /* =============
     Section 1
 ============= */
-section {
+section > div h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+  font-family: 'Nanum Gothic', sans-serif; }
+
+section > div h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 15px;
+  font-family: 'PT Mono', monospace; }
+
+section > div h3 {
+  font-size: 50px;
+  font-family: 'PT Mono', monospace; }
+
+section > div #paragraph-space {
   padding: 30px;
+  grid-gap: 30px;
+  padding-top: 100px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-areas: "p1 p2"; }
-  section div #p1-container {
+  grid-template-areas: "p1 p2";
+  font-size: 15px;
+  font-family: 'PT Mono', monospace; }
+  section > div #paragraph-space > div p1 {
     grid-area: p1;
     font-size: 15px;
     font-family: 'PT Mono', monospace; }
-  section div #p2-container {
+  section > div #paragraph-space > div p2 {
     grid-area: p2;
     font-size: 15px;
     font-family: 'PT Mono', monospace; }
-  section div h1 {
-    display: flex;
-    justify-content: center;
-    font-size: 30px;
-    font-family: 'Nanum Gothic', sans-serif; }
-  section div h2 {
-    display: flex;
-    justify-content: center;
-    font-size: 15px;
-    font-family: 'PT Mono', monospace; }
-  section div h3 {
-    font-size: 50px;
-    font-family: 'PT Mono', monospace; }
-  section div h4 {
+  section > div #paragraph-space > div h4 {
     font-size: 50px;
     font-family: 'PT Mono', monospace; }
 
 /* =============
     Home Image
 ============= */
-section div #grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-gap: 10px;
-  padding: 10px; }
+#index-brands > div {
+  /*li:nth-child(13) {
+                 grid-area: nu4;
+            }
 
-section div .item1 {
-  grid-column-start: 1;
-  grid-column-end: 1; }
+            li:nth-child(14) {
+                 grid-area: no4;
+            }
+
+            li:nth-child(15) {
+                grid-area: a4;
+            }*/ }
+  #index-brands > div ul {
+    display: grid;
+    grid-template-columns: repeat 3, 1fr;
+    grid-template-areas: "l1 l2 l3" "nu1 no1 a1" "nu2 no2 a2" "nu3 no3 a3";
+    /*"nb1 b2 b3"*/
+    grid-gap: 10px;
+    padding: 10px; }
+  #index-brands > div li {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+  #index-brands > div li:nth-child(1) {
+    grid-area: l1; }
+  #index-brands > div li:nth-child(2) {
+    grid-area: l2; }
+  #index-brands > div li:nth-child(3) {
+    grid-area: l3; }
+  #index-brands > div li:nth-child(4) {
+    grid-area: nu1; }
+  #index-brands > div li:nth-child(5) {
+    grid-area: no1; }
+  #index-brands > div li:nth-child(6) {
+    grid-area: a1; }
+  #index-brands > div li:nth-child(7) {
+    grid-area: nu2; }
+  #index-brands > div li:nth-child(8) {
+    grid-area: no2; }
+  #index-brands > div li:nth-child(9) {
+    grid-area: a2; }
+  #index-brands > div li:nth-child(10) {
+    grid-area: nu3; }
+  #index-brands > div li:nth-child(11) {
+    grid-area: no3; }
+  #index-brands > div li:nth-child(12) {
+    grid-area: a3; }
