--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -19,5 +19,4 @@
 @import "layout/_footer";
 
 // Sections Styles
-@import "sections/_section-1";
-@import "sections/_section-2";
+@import "sections/index-content";
