--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -389,6 +389,7 @@ header {
     grid-template-areas: "t1 t2 t3 t4 . . . t5";
     font-family: 'Nanum Gothic', sans-serif; }
     header div #logo-container {
+      border: 1px red solid;
       grid-area: t1;
       display: flex;
       justify-content: center;
@@ -401,22 +402,26 @@ header {
           header div #logo-container div img {
             width: initial; } }
     header div #login-container {
+      border: 1px red solid;
       grid-area: t2;
       display: flex;
       justify-content: center; }
     header div #brands-container {
+      border: 1px red solid;
       grid-area: t3;
       display: flex;
       justify-content: center; }
     header div #about-container {
+      border: 1px red solid;
       grid-area: t4;
       display: flex;
       justify-content: center; }
     header div #burger-container {
+      border: 1px red solid;
       grid-area: t5;
       font-size: 1.875rem;
       display: flex;
-      justify-content: space-between; }
+      justify-content: center; }
 
 /* =============
     Footer
@@ -468,92 +473,224 @@ footer {
         font-size: 30px; }
 
 /* =============
-    Section 1
+    home intro
 ============= */
-section > div h1 {
+#intro-fash > div #intro {
   display: flex;
-  justify-content: center;
-  font-size: 30px;
-  font-family: 'Nanum Gothic', sans-serif; }
-
-section > div h2 {
-  display: flex;
-  justify-content: center;
-  font-size: 15px;
-  font-family: 'PT Mono', monospace; }
-
-section > div h3 {
-  font-size: 50px;
-  font-family: 'PT Mono', monospace; }
-
-section > div #paragraph-space {
-  padding: 30px;
-  grid-gap: 30px;
-  padding-top: 100px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-areas: "p1 p2";
-  font-size: 15px;
-  font-family: 'PT Mono', monospace; }
-  section > div #paragraph-space > div p1 {
-    grid-area: p1;
+  justify-content: center; }
+  #intro-fash > div #intro article h1 {
+    padding-top: 100px;
+    font-size: 30px;
+    font-family: 'Nanum Gothic', sans-serif; }
+  #intro-fash > div #intro article h2 {
     font-size: 15px;
     font-family: 'PT Mono', monospace; }
-  section > div #paragraph-space > div p2 {
-    grid-area: p2;
-    font-size: 15px;
-    font-family: 'PT Mono', monospace; }
-  section > div #paragraph-space > div h4 {
+  #intro-fash > div #intro article h3 {
     font-size: 50px;
     font-family: 'PT Mono', monospace; }
 
+#intro-fash > div #paragraph-spacing {
+  display: grid;
+  gap: 30px;
+  padding-top: 100px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "p1 p2"; }
+  #intro-fash > div #paragraph-spacing > div p1 {
+    grid-area: p1;
+    font-size: 15px;
+    font-family: 'PT Mono', monospace; }
+  #intro-fash > div #paragraph-spacing > div p2 {
+    grid-area: p2;
+    font-size: 15px;
+    font-family: 'PT Mono', monospace; }
+
+#intro-fash > div article h4 {
+  font-size: 50px;
+  font-family: 'PT Mono', monospace; }
+
 /* =============
-    Home Image
+    READ BUTTON
 ============= */
-#index-brands > div {
-  /*li:nth-child(13) {
-                 grid-area: nu4;
-            }
+#read-container {
+  padding: 30px;
+  text-align: right;
+  display: grid;
+  display: flex;
+  justify-content: center; }
+  #read-container a:link,
+  #read-container a:visited {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: #fff;
+    padding: 5px;
+    font-size: 15px;
+    font-family: 'PT Mono', monospace; }
+  #read-container a:hover,
+  #read-container a:active {
+    background-color: #FF4500;
+    color: white; }
 
-            li:nth-child(14) {
-                 grid-area: no4;
-            }
-
-            li:nth-child(15) {
-                grid-area: a4;
-            }*/ }
+/* =============
+    Home Images
+============= */
+#index-brands {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0; }
+  @media (min-width: 992px) {
+    #index-brands {
+      padding: 40px 0; } }
+  @media (min-width: 768px) {
+    #index-brands {
+      padding: 30px 0; } }
   #index-brands > div ul {
     display: grid;
     grid-template-columns: repeat 3, 1fr;
-    grid-template-areas: "l1 l2 l3" "nu1 no1 a1" "nu2 no2 a2" "nu3 no3 a3";
-    /*"nb1 b2 b3"*/
-    grid-gap: 10px;
-    padding: 10px; }
-  #index-brands > div li {
+    grid-template-areas: "l1 l2 l3" "nu1 no1 a1" "nu2 no2 a2" "nu3 no3 a3" "nb1 b2 b3";
+    grid-gap: 10px; }
+  #index-brands > div li:nth-child(1) {
     display: flex;
     justify-content: center;
-    align-items: center; }
-  #index-brands > div li:nth-child(1) {
     grid-area: l1; }
   #index-brands > div li:nth-child(2) {
-    grid-area: l2; }
+    grid-area: l2;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(3) {
-    grid-area: l3; }
+    grid-area: l3;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(4) {
-    grid-area: nu1; }
+    grid-area: nu1;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(5) {
-    grid-area: no1; }
+    grid-area: no1;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(6) {
-    grid-area: a1; }
+    grid-area: a1;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(7) {
-    grid-area: nu2; }
+    grid-area: nu2;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(8) {
-    grid-area: no2; }
+    grid-area: no2;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(9) {
-    grid-area: a2; }
+    grid-area: a2;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(10) {
-    grid-area: nu3; }
+    grid-area: nu3;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(11) {
-    grid-area: no3; }
+    grid-area: no3;
+    display: flex;
+    justify-content: center; }
   #index-brands > div li:nth-child(12) {
-    grid-area: a3; }
+    grid-area: a3;
+    display: flex;
+    justify-content: center; }
+  #index-brands > div li:nth-child(13) {
+    grid-area: nb1;
+    padding: 30px;
+    text-align: right;
+    display: grid;
+    grid-template-columns: repeat 3, 1fr;
+    grid-template-areas: "b1 b2 b3";
+    display: flex;
+    justify-content: center; }
+    #index-brands > div li:nth-child(13) a:link,
+    #index-brands > div li:nth-child(13) a:visited {
+      display: flex;
+      justify-content: center;
+      background-color: black;
+      color: #fff;
+      padding: 5px;
+      font-size: 15px;
+      font-family: 'PT Mono', monospace; }
+    #index-brands > div li:nth-child(13) a:hover,
+    #index-brands > div li:nth-child(13) a:active {
+      background-color: #FF4500;
+      color: white; }
+  #index-brands > div li:nth-child(14) {
+    grid-area: b2;
+    padding: 30px;
+    text-align: right;
+    display: grid;
+    grid-template-columns: repeat 3, 1fr;
+    grid-template-areas: "b1 b2 b3";
+    display: flex;
+    justify-content: center; }
+    #index-brands > div li:nth-child(14) a:link,
+    #index-brands > div li:nth-child(14) a:visited {
+      display: flex;
+      justify-content: center;
+      background-color: black;
+      color: #fff;
+      padding: 5px;
+      font-size: 15px;
+      font-family: 'PT Mono', monospace; }
+    #index-brands > div li:nth-child(14) a:hover,
+    #index-brands > div li:nth-child(14) a:active {
+      background-color: #FF4500;
+      color: white; }
+  #index-brands > div li:nth-child(15) {
+    grid-area: b3;
+    padding: 30px;
+    text-align: right;
+    grid-template-columns: repeat 3, 1fr;
+    grid-template-areas: "b1 b2 b3";
+    display: flex;
+    justify-content: center; }
+    #index-brands > div li:nth-child(15) a:link,
+    #index-brands > div li:nth-child(15) a:visited {
+      display: flex;
+      justify-content: center;
+      background-color: black;
+      color: #fff;
+      padding: 5px;
+      font-size: 15px;
+      font-family: 'PT Mono', monospace; }
+    #index-brands > div li:nth-child(15) a:hover,
+    #index-brands > div li:nth-child(15) a:active {
+      background-color: #FF4500;
+      color: white; }
+
+/* =============
+    BUY BUTTONs
+============= 
+
+#button-container {
+    padding: 30px;
+    text-align: right;
+    display: grid;
+    grid-template-columns: repeat (3,1fr);
+    grid-template-areas: "b1 b2 b3";
+    display: flex;
+    justify-content: center;
+
+    a:link,
+    a:visited {
+        display: flex;
+        justify-content: center;
+        background-color:black;
+        color: $white;
+        padding: 5px;
+        font-size: 15px;
+        font-family: 'PT Mono', monospace;
+    }
+
+    a:hover,
+    a:active {
+        background-color: 	#FF4500;
+        color: white;
+    }
+
+} */
