--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -22,3 +22,4 @@
 @import "sections/index-content";
 @import "sections/about-content";
 @import "sections/gallery-content";
+@import "sections/_instagram-content";
