--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -23,3 +23,5 @@
 @import "sections/about-content";
 @import "sections/gallery-content";
 @import "sections/_instagram-content";
+@import "sections/contact-content";
+
