--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -13,7 +13,9 @@ footer{
             font-family: 'Nanum Gothic', sans-serif;
             font-size: 30px;
             border-bottom: 15px black solid;
+            width: 100%;
         }
+        
         p{
             font-family: 'PT Mono', monospace;
             padding:30px;
