--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -19,9 +19,9 @@
 @import "layout/_footer";
 
 // Sections Styles
-@import "sections/index-content";
-@import "sections/about-content";
-@import "sections/gallery-content";
+@import "sections/_index-content";
+@import "sections/_about-content";
+@import "sections/_gallery-content";
 @import "sections/_instagram-content";
-@import "sections/contact-content";
+@import "sections/_contact-content";
 
