--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -14,6 +14,10 @@ ul{
     }
 }
 
+a{
+    text-decoration: none;
+}
+
 .grid-container{
     display:grid;
     grid-template-columns: 15px auto 15px;
