--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -5,7 +5,7 @@
     align-items: center;
     background-color: $white;
     bottom: 0;
-    display: none;
+    display: flex;
     height: 100vh;
     justify-content: center;
     left: 0;
@@ -23,12 +23,14 @@
             a:link,
             a:visited {
                 color: $black;
+                transition: 0.25;
             }
 
             &:hover,
             &:active {
                 background-color: $black;
                 padding: 20px;
+                transition: 0.25;
 
                 h2 {
                     color: $white;
